@@ -1,5 +1,5 @@
 <?php
-// $Id: views_plugin_exposed_form.inc,v 1.2.2.15 2010-11-05 07:20:54 dereine Exp $
+// $Id: views_plugin_exposed_form.inc,v 1.2.2.16 2010-11-06 21:25:06 dereine Exp $
 
 /**
  * The base plugin to handle exposed filter forms.
@@ -122,7 +122,8 @@ class views_plugin_exposed_form extends views_plugin {
     }
 
     $form_state['exposed_form_plugin'] = $this;
-    $output = drupal_render(drupal_build_form('views_exposed_form', $form_state));
+    $form = drupal_build_form('views_exposed_form', $form_state);
+    $output = drupal_render($form);
     if (!empty($form_state['js settings'])) {
       $this->view->js_settings = $form_state['js settings'];
     }
