@@ -430,6 +430,7 @@ Views 3.x-7.x-dev
     o #807614 by dereine: Test filter_numeric.
     o #928000 by mfer, dereine: form.js dependency missing.
     o by dereine: Fix some notices.
+    o by dereine: Fix views_exposed_form test.
 
 Views 6.x-3.x-dev
     o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
